# smk-starter

./: CMakeLists.txt
snap/: snapcraft.yaml
src/: index.html  main.cpp
